
package net;

//备注：C表示客户端用，S表示服务器用，CS表示客户端与服务器通用


// 玩家基本信息
message base_info 
{
	optional uint32 uid				= 1;				// 游戏ID
	optional bytes	name 			= 2;				// 昵称	
	optional uint32 sex		    	= 3;				// 性别	
	optional int64	coin 			= 5;				// 金币		
	optional uint32 vip 			= 7;				// vip经验值
	optional uint32 clogin			= 9;				// 连续登陆天数
	optional uint32 weeklogin		= 10;				// 本周累计登陆天数
	optional uint32 login_ip		= 14;				// 登陆IP
	optional uint32 all_login_days  = 15;				// 累计登陆天数
}











